--- a/moozer-frontend/src/index.css
+++ b/moozer-frontend/src/index.css
@@ -15,6 +15,7 @@ body {
 .text-brand-gradient {
 	background: linear-gradient(to right, #fc766a 0%, #cc3c08 100%);
 	-webkit-background-clip: text;
+	background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
 
